[package]
name = "bbx"
description = "A robust, performant BBCode pull parser."
license = "MIT"
repository = "https://github.com/moonheart08/bbx"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
bitflags = "^2"
static_assertions = "^1"

[features]
default = ["track_open_tags", "parser_rules"]
track_open_tags = []
parser_rules = ["track_open_tags"]
nightly = []

[package.metadata.release]
owners = ["moonheart08"]