[package]
name = "bbx"
description = "A robust, performant BBCode pull parser."
license = "MIT"
repository = "https://github.com/moonheart08/bbx"
version = "0.3.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
bitflags = "^2"
static_assertions = "^1"
html-escape = { version = "0.2.13", optional = true }

[features]
default = ["html_gen", "track_open_tags", "parser_rules"]
alloc = []
track_open_tags = ["alloc"]
parser_rules = ["alloc", "track_open_tags"]
html_gen = ["alloc", "track_open_tags", "parser_rules", "dep:html-escape"]
nightly = []

[package.metadata.release]
owners = ["moonheart08"]
